# pudl

./: .bandit  .bandit.yml  .buildinfo  .codecov.yml  .coveragerc  .dockerignore  .env.example  .envrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yml  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .secrets.baseline  .taplo.toml  .travis.yml  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.html  CONTRIBUTING.rst  Dockerfile  LICENSE.html  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  REQUIREMENTS.md  REQUIREMENTS.txt  alembic.ini  assign_county_fips.py  available_versions.json  (+30 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  fix-git-worktree.sh  fix-pixi-shebangs.sh
.doctrees/: CONTRIBUTING.doctree  LICENSE.doctree  bibliography.doctree  code_of_conduct.doctree  data_access.doctree  index.doctree  release_notes.doctree
.github/: .gitignore  AGENTS.md  FUNDING.yml  actionlint.yaml  actionlint.yml  dependabot.yml  pull_request_template.md  release.yml
_modules/: index.html  pudl.html
_sources/: data_access.rst.txt  index.rst.txt  release_notes.rst.txt
_static/: documentation_options.js
autoapi/: index.html
builds/: .gitignore  Dockerfile  dagster-ferceqr.yaml  dagster.yaml  ferceqr_batch.sh  ferceqr_cleanup_staging.py  pudl_batch.sh
ci/: install_travis.sh  setup_postgres.sh  update_datastore.sh
data/: .gitignore  README.txt  get-all-data.sh
data_dictionaries/: codes_and_labels.html  ferc1_db.html  index.html  pudl_db.html  usage_warnings.html
data_sources/: censusdp1tract.html  censuspep.html  eia176.html  eia860.html  eia861.html  eia923.html  eia930.html  eiaaeo.html  eiaapi.html  epacamd_eia.html  epacems.html  ferc1.html  ferc714.html  ferceqr.html  future_data.html  gridpathratoolkit.html  index.html  nrelatb.html  other_data.html  phmsagas.html  rus12.html  rus7.html  sec10k.html  vcerare.html  wip_future.html
dbt/: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dev/: build_docs.html  clone_ferc1.html  data_guidelines.html  data_validation_quickstart.html  data_validation_reference.html  datastore.html  dev_dagster.html  dev_setup.html  existing_data_updates.html  ferceqr_data_builds.html  index.html  infrastructure_as_code.html  managing_external_contributions.html  metadata.html  naming_conventions.html  nightly_data_builds.html  project_management.html  pudl_id_mapping.html  run_a_release.html  run_the_etl.html  testing.html
devtools/: check_against_nightly.py  ci-environment.yml  convert_bib_file.py  create_test_data.py  data-release.sh  databeta.sh  dbt_helper.py  debug-column-mapping.ipynb  debug-eia-etl.ipynb  debug-ferc1-etl.ipynb  debug-harvesting.ipynb  early-eia860-harvesting-debug.ipynb  eia-etl-debug.ipynb  eia_ferc_utilities_match.ipynb  environment.yml  explosion_ferc1.ipynb  ferc1-etl-debug.ipynb  generate_batch_config.py  github-action-usage.ipynb  harvesting_debug.ipynb  inspect-assets.ipynb  inspect-eia_923_schedule8a.ipynb  jupyterlab_build.sh  materialize_asset.py  materialize_to_feather.py  materialize_to_parquet.py  memory_profile.py  output-table-conversion-test.ipynb  parquet_to_duckdb.py  print_requirements.py  pudl_id_mapping_help.ipynb  pudl_to_postgres.sh  pyroscope_pudl_etl.sh  pyspy_pudl_etl.sh  python-output-table-conversion-debug.ipynb  run_on_batch.py  save_github_metrics.py  sec_scratch.ipynb  sec_scratch_katie.ipynb  splink-ferc1-eia-match.ipynb  (+3 more)
docker/: .env  Dockerfile  Dockerfile.tiny  dagster.yaml  docker-compose.yml  gcp_ferceqr_etl.sh  gcp_pudl_etl.sh  local_pudl_etl.sh  new_pudl_etl.sh  pudl_etl.sh  requirements-pudl-etl.txt  vm_startup_script.sh
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Introduction.rst  LICENSE.rst  README.rst  REQUIREMENTS.md  acknowledgments.rst  background.rst  bibliography.rst  build_and_testing.md  build_and_testing.rst  catalyst_cites.bib  catalyst_pubs.bib  clone_ferc1.rst  cloud_access.rst  code.rst  code_guidelines.rst  code_standards.rst  conf.py  cooperative_cites.bib  data.rst  data_access.rst  data_catalog.rst  data_dictionary.rst  data_guidelines.rst  data_sources.rst  datapackages.rst  datasets.rst  datastore.rst  dev_setup.rst  docs-environment.yml  eia860.rst  eia861.rst  ferc1.rst  further_reading.bib  getting_started.md  getting_started.rst  getting_started_for_linux.md  (+25 more)
environments/: .gitignore  conda-linux-64.lock.yml  conda-linux-aarch64.lock.yml  conda-lock.yml  conda-osx-64.lock.yml  conda-osx-arm64.lock.yml  conda-win-64.lock.yml  dev-environment.yml  readthedocs-linux-64.conda.lock.yml  test-environment.yml
methodology/: entity_resolution.html  index.html  sec10k_modeling.html  timeseries_imputation.html
migrations/: env.py
notebooks/: .gitignore  ferc_to_eia_plant_correlations.ipynb  mcoe_model_inputs.ipynb
pudl/: ETL_pkg.py  __init__.py  analysis.py  clean_eia860.py  clean_eia923.py  clean_ferc1.py  clean_pudl.py  constants.py  datastore.py  eia860.py  eia923.py  eiaf923.py  f1_dbf2pg.sh  ferc1.py  fercf1.py  helpers.py  init.py  load.py  mcoe.py  mcoe_vs_ppa.py  models.py  models_eia860.py  models_eia923.py  models_epacems.py  models_ferc1.py  outputs.py  pudl.py  settings.py  test.py  zipper.py
release/: Dockerfile.git  Dockerfile.local  Dockerfile.tiny  Dockerfile.validation  data-release.sh  settings.yml
results/: .gitignore
scratch/: metadata.py  sample_metadata.py  sample_metadata_unfilled.py
scripts/: .gitignore  create_test_data.py  epacems_to_parquet.py  ferc1_to_sqlite.py  init_pudl.py  missing_plants.txt  pudl_test.sh  quarterlies-helper.py  reset_db.sh  reset_test_db.sh  settings.yml  settings_ferc1_to_sqlite_default.yml  settings_init_pudl_default.yml  settings_init_pudl_package.yml  settings_pudl_package_test.yml  test_pudl.sh  testing_settings.yml  update_datastore.py
settings/: etl_example.yml  etl_fast.yml  etl_pudl_example.yml  settings_ferc1_to_sqlite_default.yml  settings_init_pudl_default.yml
superset/: Dockerfile  README.md  (+6 more)
(+13609 files in other folders)
