[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pudl"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>\\d{4}\\.\\d{1,2}\\.\\d{1,2})$"
git_describe_command = ["git", "describe", "--tags", "--long", "--match", "v20*"]

[tool.hatch.build.hooks.vcs]
version-file = "src/pudl/_version.py"

[project]
name = "catalystcoop.pudl"
description = "An open data processing pipeline for US energy data"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [{ name = "Catalyst Cooperative", email = "pudl@catalyst.coop" }]
requires-python = ">=3.13,<3.14.0a0"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
# Dependencies are managed via pixi and installed from conda-forge.
# See [tool.pixi.dependencies] and [tool.pixi.feature.*.dependencies] below.
# This package is an application, not a library, and should only be installed
# from the repository in editable mode using: pixi install
# All optional dependencies are now managed via pixi features.
# See [tool.pixi.feature.*.dependencies] below.
dependencies = []

[tool.pixi.workspace]
name = "catalystcoop.pudl"
platforms = ["linux-64", "osx-64", "osx-arm64"]
channels = ["conda-forge"]

[tool.pixi.dependencies]
# Runtime dependencies
alembic = ">=1.17"
boto3 = ">=1.35"
bottleneck = ">=1.5.0"
"catalystcoop.dbfread" = "<3.1,>=3.0"
"catalystcoop.ferc_xbrl_extractor" = "<2,>=1.7.3"
# I/O bug in click 8.3.[0-1] https://github.com/pallets/click/issues/3110
click = "<8.2 | >8.3.1"
coloredlogs = ">=14.0"
coverage = ">=7.10"
curl = ">=8.17"
dagster = ">=1.12.7"
dagster-dbt = ">=1!0.28.7"
dagster-dg-cli = ">=1.12.7"
dagster-postgres = ">=1!0.28.7"
dagster-webserver = ">=1.12.7"
dbt-core = ">=1.10.13"
dbt-duckdb = ">=1.9.4"
deepdiff = ">=8"
doc8 = ">=1.1"
email-validator = ">=1.0.3"
frictionless = "<6,>=5"
fsspec = ">=2025"
furo = ">=2024"
gcsfs = ">=2025"
gdal = "==3.12.1"
geoarrow-pyarrow = ">=0.2"
geopandas = ">=1.1"
google-cloud-sdk = ">=535"
grpcio = "==1.73.1"
grpcio-health-checking = "==1.73.1"
grpcio-status = "==1.73.1"
hypothesis = ">=6.123"
jellyfish = ">=1"
jinja2 = ">=3.1"
jupyter = "*"
jupyter-lsp = "*"
jupyter-resource-usage = "*"
jupyterlab = ">4.4"
jupyterlab-lsp = "*"
matplotlib-base = ">=3.10"
memray = ">=1.18.0"
mlflow = ">=3.8"
nbconvert = ">=7"
nbformat = ">=5.10"
networkx = ">=3.6"
nodejs = ">=24"
numba = ">=0.63.1"
numexpr = ">=2.10"
numpy = ">=2.3"
packaging = ">=25"
pandas = ">=2.3"
pandoc = ">=3.7"
pandera-core = ">=0.27"
parallel = ">=20250822"
pip = ">=25"
polars = ">=1.36"
pre-commit = ">=4"
prettier = ">=3.6,<4"
pyarrow = "<21,>=20"
pydantic = ">=2.12"
pydantic-settings = ">=2.11"
pygraphviz = "*"
pytest = ">=9"
pytest-console-scripts = ">=1.4"
pytest-cov = ">=7"
pytest-mock = ">=3.15"
pytest-order = ">=1.3"
pytest-xdist = ">=3.8"
python = ">=3.13,<3.14.0a0"
python-build = ">=1.2"
python-calamine = ">=0.6.1"
python-dotenv = ">=1"
python-duckdb = ">=1.4"
pytz = ">=2025"
pyyaml = ">=6"
readthedocs-sphinx-ext = ">=2"
requests = ">=2.32"
responses = ">=0.25"
ruff = ">=0.14"
ruff-lsp = "*"
s3fs = ">=2025"
scikit-learn = ">=1.8"
scipy = ">=1.16"
shapely = ">=2.1.1"
sphinx = ">=8"
sphinx-autoapi = ">=3.6.1"
sphinx-issues = ">=5"
sphinx-reredirects = ">=1"
sphinx-tabs = ">=3.4"
sphinxcontrib-bibtex = ">=2.6"
sphinxcontrib-googleanalytics = ">=0.4"
splink = ">=4.0.10"
sqlalchemy = ">=2"
sqlite = ">=3.51"
terraform = ">=1.14"
timezonefinder = ">=8"
typos = ">=1.40"
universal-pathlib = ">=0.3.7"
urllib3 = ">=2.4"
xlsxwriter = ">=3.2"
zip = ">=3.0"

[tool.pixi.pypi-dependencies]
# Install only the local package in editable mode with no dependencies.
# All dependencies are explicitly managed via conda-forge in [tool.pixi.dependencies] above.
"catalystcoop.pudl" = { path = ".", editable = true, extras = [] }

[tool.pixi.activation.env]
# Reusable variables for pixi tasks
ETL_FAST_YML = "src/pudl/package_data/settings/etl_fast.yml"
ETL_FULL_YML = "src/pudl/package_data/settings/etl_full.yml"
PYTEST_ARGS = "--durations 20 --cov-fail-under=0"
COVARGS = "--append"
PIXI_LOCKED = "true"

[tool.pixi.tasks]
# Documentation tasks
docs-clean = { cmd = """
bash -c 'shopt -s nullglob; rm -rf \
    docs/_build \
    docs/autoapi \
    docs/data_dictionaries/pudl_db.rst \
    docs/data_dictionaries/codes_and_labels.rst \
    docs/data_dictionaries/code_csvs \
    docs/data_sources/census*.rst \
    docs/data_sources/eia*.rst \
    docs/data_sources/epacems*.rst \
    docs/data_sources/epacamd*.rst \
    docs/data_sources/ferc*.rst \
    docs/data_sources/gridpathratoolkit*.rst \
    docs/data_sources/nrelatb*.rst \
    docs/data_sources/phmsagas*.rst \
    docs/data_sources/sec10k*.rst \
    docs/data_sources/vcerare*.rst'
""" }

docs-build = { cmd = """
doc8 docs/ README.rst && \
coverage run --append -m sphinx --jobs auto -v -W -b html docs docs/_build/html
""", depends-on = ["docs-clean"] }

# Testing tasks
coverage-erase = { cmd = "coverage erase" }
pytest-unit = { cmd = "pytest $PYTEST_ARGS --doctest-modules src/pudl test/unit" }
pytest-integration = { cmd = "pytest $PYTEST_ARGS --etl-settings $ETL_FAST_YML test/integration" }
pytest-ci = { depends-on = ["pytest-unit", "pytest-integration"] }
pytest-coverage = { cmd = "coverage report", depends-on = ["coverage-erase", "docs-build", "pytest-ci"] }
pytest-jupyter = { cmd = "pytest --live-dbs test/integration/jupyter_notebooks_test.py" }
# Build the FERC 1 and PUDL DBs, ignoring foreign key constraints.
# Identify any plant or utility IDs in the DBs that haven't yet been mapped
# These outputs should be turned into normal dagster assets. See issue #4338
unmapped-ids = { cmd = """
pytest \
    --save-unmapped-ids
    --ignore-foreign-key-constraints \
    --etl-settings $ETL_FULL_YML \
    test/integration/glue_test.py
""" }

# ETL tasks
ferc = { cmd = """
bash -c 'shopt -s nullglob; rm -f \
    $PUDL_OUTPUT/ferc*.sqlite \
    $PUDL_OUTPUT/ferc*.duckdb \
    $PUDL_OUTPUT/ferc*_xbrl_datapackage.json \
    $PUDL_OUTPUT/ferc*_xbrl_taxonomy_metadata.json' && \
coverage run $COVARGS ferc_to_sqlite $ETL_FULL_YML
""" }

pudl = { cmd = """
bash -c 'shopt -s nullglob; rm -f $PUDL_OUTPUT/pudl.sqlite' && \
alembic upgrade head && \
coverage run $COVARGS pudl_etl $ETL_FULL_YML
""" }

# Code quality tasks
pre-commit = { cmd = "pre-commit run --all-files" }

# Dependency Update tasks
pre-commit-autoupdate = { cmd = "pre-commit autoupdate" }
dbt-deps-upgrade = { cmd = "dbt deps --upgrade", cwd = "dbt" }

[project.scripts]
ferc_to_sqlite = "pudl.ferc_to_sqlite.cli:main"
metadata_to_rst = "pudl.convert.metadata_to_rst:metadata_to_rst"
pudl_check_fks = "pudl.etl.check_foreign_keys:pudl_check_fks"
pudl_datastore = "pudl.workspace.datastore:pudl_datastore"
pudl_etl = "pudl.etl.cli:pudl_etl"
pudl_service_territories = "pudl.analysis.service_territory:pudl_service_territories"
dbt_helper = "pudl.scripts.dbt_helper:dbt_helper"
pudl_null_cols = "pudl.scripts.pudl_null_cols:main"
resource_description = "pudl.scripts.resource_description:main"
zenodo_data_release = "pudl.scripts.zenodo_data_release:pudl_zenodo_data_release"

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4
# Don't touch autogenerated alembic migrations and ignore notebooks for now
exclude = ["migrations/versions", "*.ipynb"]

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# Configurations that apply to the `lint` subcommand.
preview = true # Required for NPY201
explicit-preview-rules = true # and ONLY NPY201
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C", # Limit cyclomatic complexity using mccabe
    "C4", # flake8-comprehensions
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "EXE", # executable file issues
    "F", # pyflakes
    "I", # isort
    "ICN", # flake8 import conventions
    "N", # pep8-naming
    "NPY", # NumPy specific checks
    "PD", # pandas checks
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie miscellaneous linting
    "PTH", # use pathlib
    "Q", # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade (use modern python syntax)
    "W", # pycodestyle warnings
    # These rules would be good, but will require more effort:
    # "ANN", # identify missing type annotations
    # "ARG", # find unused arguments
    # "DTZ", # datetime / timzeone issues flake8-datetimez
    # "ERA", # eradicate: finds commented out code
    # "FURB", # refurb: general code quality/modernization. Still in preview.
    # "PERF", # performance issues
    # "PT", # pytest style
    # "PL", # PyLint (lots of rules)
    # "RUF", # Ruff specific rules
    # "T", # Find print statements that should probably be logging
]
ignore = [
    "B006", # Don't use mutable data structures for argument defaults. TODO: FIX
    "B008", # Don't perform function calls in argument defaults. TODO: FIX
    "D401", # Require imperative mood in docstrings.
    "D417",
    "E501", # Overlong lines.
    "E203", # Space before ':' (black recommends to ignore)
    "E226", # Missing whitespace around arithmetic operator
    "E266", # Too many leading `#` before block comment
    "PD003", # Use of isna rather than isnull
    "PD004", # Use of notna rather than notnull
    "PD010", # Use of df.stack()
    "PD013", # Use of df.unstack()
    "PD015", # Use of pd.merge() rather than df.merge()
    "RET504", # Ignore unnecessary assignment before return
    "RUF005", # Unpack iterables instead of concatenation
    "S101", # Use of assert
]
extend-select = ["NPY201"] # preview rule to easy migration to Numpy 2.0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"test/*" = ["D"]
"migrations/*" = ["D", "Q"]

[tool.ruff.lint.isort]
known-first-party = ["pudl"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/ferc/form1", "docs/_build", "docs/data_sources/phmsagas"]

[tool.pytest]
minversion = "9.0"
testpaths = ["./"]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
    "ignore:Deprecated call to.*declare_namespace:DeprecationWarning:pkg_resources",
    "ignore:Deprecated call to:DeprecationWarning:google.rpc",
    "ignore:Feature names only support names:FutureWarning:sklearn.utils.validation",
    "ignore:In a future version, the Index constructor:FutureWarning:pandas.core.reshape.merge",
    "ignore:Integration of FERC 714:UserWarning:pudl.extract.ferc714",
    "ignore:Integration of EIA 861:UserWarning:pudl.extract.eia861",
    "ignore:pkg_resources is deprecated as an API.:DeprecationWarning",
    "ignore:Subclassing validator classes is not intended to be part of their public API.:DeprecationWarning",
    "ignore:Subclassing validator classes:DeprecationWarning:tableschema",
    "ignore:datetime.datetime.utcnow() is deprecated:DeprecationWarning",
    "ignore:Python 3.14 will, by default, filter extracted tar archives:DeprecationWarning:dbt_common[.*]",
    "ignore:The Shapely GEOS version:UserWarning:geopandas[.*]",
    "ignore:The `__fields__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:unittest.mock",
    "ignore:The `__fields_set__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:unittest.mock",
    "ignore:The `__fields__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:The `__fields_set__` attribute is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:Support for class-based `config` is deprecated:pydantic.PydanticDeprecatedSince20:pydantic._internal._config",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:pydantic.PydanticDeprecatedSince20:ferc_xbrl_extractor.instance",
    "ignore:Pydantic V1 style `@validator` validators are deprecated:pydantic.PydanticDeprecatedSince20:mlflow.gateway.config",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:ferc_xbrl_extractor.taxonomy",
    "once:Could not infer format, so each element will be parsed individually, falling back to `dateutil`.:UserWarning:pudl.extract.eia_bulk_elec",
    "once:In a future version:FutureWarning:pudl.helpers",
    "once:open_binary is deprecated:DeprecationWarning:pudl.glue.ferc1_eia",
    "once:open_text is deprecated:DeprecationWarning:pudl.glue.ferc1_eia",
    "once:The behavior of DataFrame concatenation with empty or all-NA entries is deprecated.:FutureWarning",
    "once:Valid config keys have changed in V2:UserWarning",
    "once:AssetExecutionContext.op_config is deprecated:DeprecationWarning",
]

markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
# must not end with `--cov` since that will treat the first argument you pass
# to pytest as a coverage source! see
# https://github.com/catalyst-cooperative/pudl/issues/3609
addopts = [
    "--verbose",
    "--cov",
    "--cov-append",
    "--cov-config=pyproject.toml",
    "--cov-report=",
]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "DEBUG"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]

[tool.coverage.run]
source = ["src/pudl/", "test/integration/", "test/unit/"]
omit = ["src/pudl/*/ferceqr.py"]
relative_files = true

[tool.coverage.report]
precision = 2
sort = "miss"
skip_empty = true
fail_under = 93
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Stuff that's not expected to run normally...
    "logger.debug",
]

[tool.dagster]
modules = [
    { type = "module", name = "pudl.etl" },
    { type = "module", name = "pudl.ferc_to_sqlite" },
]

[tool.typos.default]
# Ignore spellchecking all lines with # spellchecker:ignore
extend-ignore-re = ["(?Rm)^.*(#|//)\\s*spellchecker:ignore$"]

[tool.typos.default.extend-words]
# Add words that should be excepted from spell-checking
ACI = "ACI"
AER = "AER"
AKS = "AKS"
BA = "BA"
BCK = "BCK"
consit = "consit"
cll = "cll"
EDE = "EDE"
fillin = "fillin"
formate = "formate"
ISO = "ISO"
LaMoure = "LaMoure"
Kake = "Kake"
MAPE = "MAPE"
MAPP = "MAPP"
MER = "MER"
Moure = "Moure"
ND = "ND"
OT = "OT"
othr = "othr"
PADD = "PADD"
PN = "PN"
PUDL = "PUDL"
PudlTabl = "PudlTabl"
RTO = "RTO"
ser = "ser"
Tabl = "Tabl"
TOU = "TOU"
TRE = "TRE"
Worchester = "Worchester"
wrk = "wrk"

[tool.typos.files]
extend-exclude = [
    "*.yml",
    "*.toml",
    "*.bib",
    "*.csv",
    "*.html",
    "src/pudl/metadata/codes.py",
    "migrations/",
    "notebooks/",
    "devtools/",
    "test/",
    "src/pudl/transform/params/ferc1.py",
]
